--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-CLAUDE_API_KEY=ysk-ant-api03-MMLbPBfnaZpjRcvP8ju87xtz56Y-N1Lk43Ya-l_bcCN4OJfAcn4c5lO6-DxL5ZXKuSWIQLf2DT-pk1hLm9AqA-_wuBAAA
+CLAUDE_API_KEY=
+OPENAI_API_KEY=
 PORT=3001
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:3000
