--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "openai": "^4.67.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -24,7 +25,7 @@
     "ts-node": "^10.9.1",
     "nodemon": "^3.0.2"
   },
-  "keywords": ["ai", "forms", "dynamic", "claude", "decision-tree"],
+  "keywords": ["ai", "forms", "dynamic", "openai", "gpt-4o", "decision-tree"],
   "author": "Your Company",
   "license": "MIT"
 }
