--- a/package.json
+++ b/package.json
@@ -11,22 +11,31 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^6.18.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "uuid": "^9.0.1",
+    "express": "^4.18.2",
     "openai": "^4.67.1",
-    "typescript": "^5.3.3"
+    "prisma": "^6.18.0",
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "@types/uuid": "^9.0.7",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
-    "ts-node": "^10.9.1",
-    "nodemon": "^3.0.2"
+    "@types/uuid": "^9.0.7",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.1"
   },
-  "keywords": ["ai", "forms", "dynamic", "openai", "gpt-4o", "decision-tree"],
+  "keywords": [
+    "ai",
+    "forms",
+    "dynamic",
+    "openai",
+    "gpt-4o",
+    "decision-tree"
+  ],
   "author": "Your Company",
   "license": "MIT"
 }
